# qt-beleg

./: CMakeLists.txt  LICENSE  README.md  book.hpp  cd.hpp  datastore.hpp  dvd.hpp  list.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  medium.cpp  medium.hpp  person.cpp  person.hpp
.github/workflows/: cmake.yml
sample-data/: README.md  media.txt  people.txt
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/lib/: CMakeLists.txt  datastore.hpp  list.hpp
src/models/: CMakeLists.txt  book.hpp  cd.hpp  dvd.hpp  medium.cpp  medium.hpp  person.cpp  person.hpp
src/view/: mainwindow.h
src/views/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
